<resources>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_tasks">Tasks</string>
    <string name="message_no_workouts">You do not have any workouts yet.\nGo on and create your first one.</string>
    <string name="action_create_workout">Create Workout</string>
    <string name="action_next">Next</string>
    <string name="label_add_exercise">Add Exercise</string>
    <string name="label_workout_creation">Workout Creation</string>
    <string name="label_body_parts">Body Parts</string>
    <string name="label_equipments">Equipments</string>
    <string name="label_filter">Filter</string>
    <string name="action_apply">Apply</string>
    <string name="label_new_workout">New Workout</string>
    <string name="action_finish">Finish</string>
    <string name="label_unfinished_workout">"You have unfinished workout "</string>
    <string name="action_continue">Continue</string>
    <string name="action_mark_as_complete">Mark As Complete</string>
    <string name="action_add_set">Add Set</string>
    <string name="sign_multiplication">*</string>
    <string name="label_reps">Reps</string>
    <string name="label_focused_body_parts">Focused Body Parts</string>
    <string name="label_last_workout_summary">Last Workout Summary</string>
    <string name="label_weight_lifted">Weight Lifted</string>
    <string name="label_sets">Sets</string>
    <string name="label_ready_for_new_workout">Ready For New Workout ?</string>
    <string name="action_start">Start</string>
    <string name="argument_workout_id">WorkoutId</string>
</resources>
