<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/header_gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/addExerciseFilterButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addExerciseCloseButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="@dimen/size8"
        android:padding="@dimen/size8"
        app:srcCompat="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/addExerciseNextButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addExerciseNextButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addExerciseNextButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/action_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addExerciseHeaderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size8"
        android:text="@string/label_add_exercise"
        android:textColor="@color/white"
        android:textSize="@dimen/text24"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/addExerciseCloseButton"
        app:layout_constraintTop_toBottomOf="@+id/addExerciseNextButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addExerciseHeaderSubLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size8"
        android:text="@string/label_workout_creation"
        android:textColor="@color/ivory"
        android:textSize="@dimen/text12"
        app:layout_constraintLeft_toLeftOf="@+id/addExerciseHeaderLabel"
        app:layout_constraintTop_toBottomOf="@+id/addExerciseHeaderLabel" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addExerciseFilterButton"
        android:layout_width="36dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/size16"
        android:padding="@dimen/size8"
        android:paddingBottom="@dimen/size16"
        app:srcCompat="@drawable/ic_filter"
        android:tint="@color/white"
        app:layout_constraintRight_toRightOf="@+id/addExerciseNextButton"
        app:layout_constraintTop_toBottomOf="@+id/addExerciseHeaderSubLabel" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar"
        android:indeterminateBehavior="repeat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
